Tidy GenerateKeyBatchesHandler (#50)